test/recursiveFunctionCapture1.slq

def main():!ğ”¹Ã—ğ”¹[]{
	x:=0:!ğ”¹;
	y:=H(0:ğ”¹); // error
	def bar(n:!â„•,t:ğ”¹[]){
		if n=0{ return (x,t); }
		if n>1 { return bar(n sub 1,t); }
		t~=[y];
		return (x,t);
	}
	return (bar(20,[]:ğ”¹[]));
}
